# swift-metal-win32

./: .gitignore  BUILD.ib  CMakeLists.txt  LICENSE  README.md  compile_commands.json
frameworks/: CMakeLists.txt
frameworks/CoreFoundation.framework/: CMakeLists.txt  CoreFoundation.tbd
frameworks/CoreFoundation.framework/Headers/: CFBase.h
frameworks/Foundation.framework/: CMakeLists.txt  Foundation.tbd
frameworks/Foundation.framework/Headers/: NSUserNotification.h
frameworks/Metal.framework/: CMakeLists.txt  Metal.tbd
frameworks/Metal.framework/Headers/: MTLAccelerationStructureCommandEncoder.h  MTLArgument.h  MTLArgumentEncoder.h  MTLBinaryArchive.h  MTLBlitCommandEncoder.h  MTLCommandBuffer.h  MTLComputeCommandEncoder.h  MTLComputePipeline.h  MTLDevice.h  MTLIndirectCommandBuffer.h  MTLIndirectCommandEncoder.h  MTLRenderCommandEncoder.h  MTLRenderPass.h  MTLRenderPipeline.h  MTLResourceStatePass.h  Metal.apinotes  Metal.h
frameworks/Metal.framework/Sources/: MTLCommands.mm  MTLDevice.mm  MTLObjects.mm  MTLPipeline.mm  MTLResource.mm  Metal.mm  MetalCommands.h  MetalDevicePrivate.h  MetalPipeline.h  MetalResource.h
frameworks/MetalKit.framework/: MetalKit.tbd
swift/: CMakeLists.txt
swift/AppKit/: CMakeLists.txt
swift/Metal/: CMakeLists.txt
swift/Metal/headers/: module.modulemap
tests/objc2/: FastARC.m  Test.h  Test.m
tools/: AppleIRDump.cpp  CMakeLists.txt  LLVMBuild.txt  MetalLib.cpp
